k8s/overlays/local/patches/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-videos-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: IfNotPresent
