k8s/overlays/local/patches/notifier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-videos-notifier
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: notifier
          imagePullPolicy: IfNotPresent
