k8s/overlays/local/patches/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-videos-processor
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: processor
          imagePullPolicy: IfNotPresent
