k8s/overlays/local/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-videos-api
spec:
  rules:
    - host: api.fiap-videos.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-videos-api
                port:
                  number: 80
